# game-life-screensaver

./: INSTALL  README  configure  configure.ac  makefile.in
debian/: changelog  control  copyright
intl/: en_US.po  game-life-screensaver.pot  prepare.sh  ru.po
res/: game-life-screensaver.desktop
src/: chunks.h  config.h.in  game.c  game_init.c  game_set.c  main.c
